--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
       
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/frontend-server
+  DOCKER_IMAGE: ghcr.io/${{ secrets.Actor }}/frontend-server
   VERSION: $ {{ github.sha }}
   NAME: frontend-server
 
