--- a/.github/workflows/cd-deploy.yml
+++ b/.github/workflows/cd-deploy.yml
@@ -3,6 +3,11 @@ name: Deploy
 on:
   repository_dispatch:
     types: [FRONTEND_DEPLOY_FINISH_TRIGGER]
+    
+env:
+  DOCKER_IMAGE: ghcr.io/${{ secrets.Actor }}/${{ secrets.Docker_Image }}
+  VERSION: $ {{ github.sha }}
+  NAME: ${{ secrets.Docker_Image }}
 
 jobs:
   build:
