--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "^27.0.0",
+    "axios": "^1.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
