--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
@@ -29,10 +30,12 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "^27.0.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue3-carousel": "^0.3.1",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
