--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@toast-ui/editor": "^3.2.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
@@ -17,6 +18,7 @@
     "vue-router": "^4.2.4",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
