--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "aws-sdk": "^2.1450.0",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.2.4",
     "vuetify": "^3.0.0-beta.0",
