--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@toast-ui/editor": "^3.2.2",
+    "aws-sdk": "^2.1450.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
-    "aws-sdk": "^2.1450.0",
     "vue-carousel": "^0.18.0",
+    "vue-daum-map": "^1.1.0",
     "vue-router": "^4.2.4",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
